# prompt-ops-maker

./: .gitignore  README-ko_kr.md  README.md  ROADMAP.md  fable5_prompt_maker.py  prompt_ops_maker.py  pyproject.toml  requirements.txt  service-ontology.json
.github/workflows/: ci.yml
.prompt-ops/: lessons.md
adapters/: __init__.py  base.py
configs/: __init__.py  naejipgak.yaml  second-salary.yaml  veris-kr.yaml
configs/_types/: __init__.py  automation-pipeline.yaml  generic.yaml  mobile-miniapp.yaml  web-public.yaml
configs/examples/: __init__.py  brand-hub.yaml  mobile-miniapp.yaml  public-real-estate-service.yaml
configs/layers/: L0_scope.yaml  L1_evidence.yaml  L2_analyze.yaml  L3_hypothesize.yaml  L4_critique.yaml  L5_report.yaml  __init__.py
core/: composer.py  layers.py  validator.py
docs/ontology-notes/: README.md
examples/: README.md
feedback/: failures.jsonl
mcp_server/: server.py
schemas/: __init__.py  critique.schema.json  evidence_ledger.schema.json  findings.schema.json
tests/: test_prompt_maker.py
