[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-ops-maker"
version = "0.1.0"
description = "Generate verification-focused operating prompts for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "veris", email = "hello@veris.kr"}]
keywords = ["prompt", "agents", "mcp", "codex", "claude", "gemini", "fable5"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
prompt-ops-maker = "prompt_ops_maker:main"

[tool.setuptools]
py-modules = ["prompt_ops_maker", "fable5_prompt_maker"]
