[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-ops-maker"
version = "0.1.0"
description = "Generate verification-focused operating prompts for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "veris", email = "hello@veris.kr"}]
keywords = ["prompt", "agents", "mcp", "codex", "claude", "gemini", "fable5"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8"]
mcp = ["mcp>=1.0"]

[project.scripts]
prompt-ops-maker = "prompt_ops_maker:main"

[tool.setuptools]
py-modules = ["prompt_ops_maker", "fable5_prompt_maker"]
packages = [
  "adapters",
  "configs",
  "configs._types",
  "configs.examples",
  "configs.layers",
  "core",
  "mcp_server",
  "schemas",
]
include-package-data = true

[tool.setuptools.package-data]
"configs._types" = ["*.yaml"]
"configs.examples" = ["*.yaml"]
"configs.layers" = ["*.yaml"]
schemas = ["*.json"]
